--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,9 +24,28 @@ jobs:
         BASE_URL: ${{ secrets.BASE_URL }}
         USER_EMAIL: ${{ secrets.USER_EMAIL }}
         USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
+      continue-on-error: true
+    - name: Generate Allure Report
+      if: always()
+      run: npx allure generate allure-results -o allure-report --clean
+    - name: Upload Allure Report
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: allure-report
+        path: allure-report/
+        retention-days: 30
+    - name: Upload Playwright Report
+      if: always()
+      uses: actions/upload-artifact@v4
       with:
         name: playwright-report
         path: playwright-report/
+        retention-days: 30
+    - name: Upload Test Results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: test-results/
         retention-days: 30
