--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,57 +4,73 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+
 jobs:
   test:
-    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        browser: [chromium, firefox, webkit]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: 'npm' # Caches your node_modules
+
+      - name: Install dependencies
+        run: npm ci
+
+      # 2026 Pro-Tip: Cache the Browsers to avoid the 15-minute download
+      - name: Cache Playwright Browsers
+        id: playwright-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Install Playwright Browser (Specific to Matrix)
+        # Instead of installing ALL, we only install the one for this matrix leg
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
+        run: npx playwright install ${{ matrix.browser }} --with-deps
+
+      - name: Run Playwright tests
+        run: npx playwright test --project=${{ matrix.browser }}
+        env:
+          HEADLESS: true
+          BASE_URL: ${{ secrets.BASE_URL }}
+          USER_EMAIL: ${{ secrets.USER_EMAIL }}
+          USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+        
+      - name: Upload Blob Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: all-blob-reports-${{ matrix.browser }}
+          path: blob-report/ 
+          retention-days: 1
+
+  generate-report:
+    if: always()
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-      env:
-        HEADLESS: true
-        BASE_URL: ${{ secrets.BASE_URL }}
-        USER_EMAIL: ${{ secrets.USER_EMAIL }}
-        USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-      continue-on-error: true
-    - name: Install Allure
-      if: always()
-      run: npm install -g allure-commandline
-
-    - name: Generate Allure Report
-      if: always()
-      run: |
-        if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
-          npx allure generate allure-results -o allure-report --clean
-        else
-          echo "No allure-results found, skipping report generation"
-        fi
-    - name: Upload Allure Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-report
-        path: allure-report/
-        retention-days: 30
-    - name: Upload Playwright Report
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
-    - name: Upload Test Results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: test-results/
-        retention-days: 30
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          cache: 'npm'
+      - run: npm ci
+      - name: Download all blobs
+        uses: actions/download-artifact@v4
+        with:
+          path: all-blob-reports
+          pattern: all-blob-reports-*
+          merge-multiple: true
+      - name: Merge into HTML Report
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
+      - name: Upload Final Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: final-combined-report
+          path: playwright-report/
