adding new blob reports space to the yaml

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,8 +33,6 @@ jobs:
           key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install Playwright Browsers
-        # We install chromium on EVERY machine so auth.setup.ts works, 
-        # plus the specific matrix browser.
         if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: npx playwright install chromium ${{ matrix.browser }} --with-deps
 
@@ -71,12 +69,13 @@ jobs:
       - name: Download all blobs
         uses: actions/download-artifact@v4
         with:
-          path: all-blob-reports
+          # pattern matches the name used in the 'test' job
           pattern: all-blob-reports-*
           merge-multiple: true
 
       - name: Merge into HTML Report
-        run: npx playwright merge-reports --reporter html ./all-blob-reports
+        # Using '.' because merge-multiple: true puts all files in the current workspace
+        run: npx playwright merge-reports --reporter html .
 
       - name: Upload Final Playwright Report
         uses: actions/upload-artifact@v4
@@ -85,7 +84,6 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-      # Optional: Keep your Allure logic if you use it locally
       - name: Install Allure
         run: npm install -g allure-commandline
 
